--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
-.App {
-    font-size: 30px;
+input,
+button,
+textarea,
+select {
+    margin: 0;
+    font: inherit;
 }
