--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,8 @@
 .App.dark {
     --bg-color: #00d4ff;
+    --inverted-bg-color: #f2f2f2;
     --primary-color: teal;
     --secondary-color: lightgreen;
+    --inverted-primary-color: #0775f7;
+    --inverted-secondary-color: #07eef7;
 }
