--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,8 @@
 .App.light {
     --bg-color: #f2f2f2;
+    --inverted-bg-color: #00d4ff;
     --primary-color: #0775f7;
     --secondary-color: #07eef7;
+    --inverted-primary-color: teal;
+    --inverted-secondary-color: lightgreen;
 }
