--- a/src/widgets/NavBar/ui/NavBar.module.scss
+++ b/src/widgets/NavBar/ui/NavBar.module.scss
@@ -1,6 +1,6 @@
 .NavBar {
     width: 100%;
-    height: var(--navbar-height) / 2;
+    height: var(--navbar-height);
     background: var(--inverted-bg-color);
     display: flex;
     align-items: center;
