--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -2,11 +2,11 @@
     --font-family-main: Consolas, Serif;
     --font-size-m: 16px;
     --font-line-m: 24px;
-    --font-m: var(--font-size-m) / var(--font-line-m) / var(var(--font-family-main));
+    --font-m: var(--font-size-m) / var(--font-line-m) / var(--font-family-main);
 
     --font-size-l: 24px;
     --font-line-l: 32px;
-    --font-l: var(--font-size-l) / var(--font-line-l) / var(var(--font-family-main));
+    --font-l: var(--font-size-l) / var(--font-line-l) / var(--font-family-main);
 
     --navbar-height: 50px;
 
