--- a/src/widgets/SideBar/ui/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar.module.scss
@@ -6,11 +6,11 @@
     transition: width 0.4s;
 }
 
-.Collapsed {
+.collapsed {
     width: var(--sidebar-width-collapsed);
 }
 
-.Switchers {
+.switchers {
     position: absolute;
     bottom: 20px;
     display: flex;
